# voice-keyboard

./: .cursorignore  .env.example  .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
.cursor/rules/: code-generation-and-actions.mdc  code-generation.mdc  fixing-errors.mdc  main.mdc  project-overview.mdc  refactoring.mdc  tech-stack.mdc
.docs/: .gitignore  project-overview.md  roadmap.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: controls.json  default.json  desktop.json
src-tauri/libs/inputbot/src/: common.rs
src-tauri/src/: app.rs  audio.rs  commands.rs  lib.rs  main.rs  modules.rs  utils.rs  whisper.rs
src-tauri/src/modules/: audio.rs  errors.rs  events.rs  input.rs  transcribation.rs
src-tauri/src/modules/audio/: device.rs  peaks.rs  session.rs  wav_writer.rs
src-tauri/src/modules/events/: message.rs  record.rs
src-tauri/src/modules/transcribation/: local.rs  whisper_streamer.rs
src/components/: AudioVisualizer.vue
src/components/controls/: AudioRecordStatus.vue  AudioVisualizer.vue
src/composables/: useAudioEvents.ts  useAudioVisualizer.ts  useBackendMessageEvents.ts  useMicrophone.ts  useRecord.ts  useShortcuts.ts  useTranscribe.ts
src/entrypoint/app/: app.ts
src/layouts/: MainLayout.vue
src/lib/: audiowave.ts  events.ts  microphone.ts  shortcuts.ts
src/lib/events/: audio.ts  (+1 more)
src/linux/: inputs.rs
src/pages/: MainPage.vue  SettingsPage.vue
src/router/: app.ts  controls.ts  index.ts
src/types/: events.ts  microphone.ts  shortcuts.ts  window.ts
src/windows/: mod.rs
(+20 files in other folders)
